--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "author": "sanghyun1128 <sanghyun1128@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "webpack",
+    "watch": "webpack --watch",
     "format": "prettier --write \"src/**/*.{js,html,css}\" \"test/**/*.{js,html,css}\""
   },
   "dependencies": {
-    "prettier": "^3.5.1"
+    "moment": "^2.30.1",
+    "prettier": "^3.5.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
