--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "format": "prettier --write \"src/**/*.{js,html,css}\" \"test/**/*.{js,html,css}\"",
-    "zip": "mkdir -p versions && zip -r versions/$npm_package_version.zip manifest.json dist node_modules src"
+    "zip": "mkdir -p versions && zip -r versions/$npm_package_version.zip manifest.json dist src"
   },
   "dependencies": {
     "moment": "^2.30.1",
